# ai

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Dockerfile  LICENSE  README.md  codegen.ts  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  service.template.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts  weekly_review_2026-06-02.md
.github/workflows/: cd.yaml  ci.yaml  ci.yml  claude.yml  deploy.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  (+2 more)
adk/: .dockerignore  Dockerfile  instrumentation.py  main.py  pyproject.toml
adk/cofacts-ai/: agent.py  instrumentation.py
adk/cofacts_ai/: .env.example  agent.py  agent_names.py  auth_context.py  gcs_signing.py  instrumentation.py  media_filedata.py  session_title.py  session_title_test.py  tools.py
adk/cofacts_ai/tests/: conftest.py  test_agent_callbacks.py  test_append_verifier_sources.py  test_inject_resolved_url_content.py  test_instrumentation.py  test_session_title.py  test_url_resolver_client.py  test_writer_callbacks.py  test_youtube_filedata.py
adk/cofacts_ai/url_resolver/: client.py
adk/cofacts_ai/url_resolver/_generated/: resolve_error_pb2.py  resolve_error_pb2.pyi  resolve_error_pb2_grpc.py  url_resolver_pb2.py  url_resolver_pb2.pyi  url_resolver_pb2_grpc.py
adk/cofacts_ai/url_resolver/protos/: resolve_error.proto  url_resolver.proto
adk/scripts/: gen_protos.sh
design/: HANDOFF.md  design.lib.pen  reply.pen
docs/: index.md  source-mapper-design.md
src/: routeTree.gen.ts  router.tsx  styles.css
(+95 files in other folders)
