[project]
name = "cofacts-ai-agent"
version = "0.1.0"
description = "Cofacts AI multi-agent fact-checking system"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pydantic",
    "google-adk",
    "google-genai",
    "google-cloud-vision",
    "httpx",
    "langfuse",
    "opentelemetry-sdk",
    "openinference-instrumentation-google-adk",
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cofacts_ai/tests"]
pythonpath = ["."]
